; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_render.c_FindPictScreen.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_render.c_FindPictScreen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i32* }
%struct.TYPE_8__ = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @FindPictScreen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @FindPictScreen(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_7__, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_8__, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call { i64, i32* } @xcb_setup_roots_iterator(i32* %11)
  %13 = bitcast %struct.TYPE_7__* %8 to { i64, i32* }*
  %14 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %13, i32 0, i32 0
  %15 = extractvalue { i64, i32* } %12, 0
  store i64 %15, i64* %14, align 8
  %16 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %13, i32 0, i32 1
  %17 = extractvalue { i64, i32* } %12, 1
  store i32* %17, i32** %16, align 8
  store i32 0, i32* %9, align 4
  br label %18

18:                                               ; preds = %23, %3
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = icmp ne i32* %20, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %18
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load i32, i32* %9, align 4
  %30 = add i32 %29, 1
  store i32 %30, i32* %9, align 4
  %31 = call i32 @xcb_screen_next(%struct.TYPE_7__* %8)
  br label %18

32:                                               ; preds = %18
  %33 = load i32*, i32** %7, align 8
  %34 = call { i64, i32* } @xcb_render_query_pict_formats_screens_iterator(i32* %33)
  %35 = bitcast %struct.TYPE_8__* %10 to { i64, i32* }*
  %36 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %35, i32 0, i32 0
  %37 = extractvalue { i64, i32* } %34, 0
  store i64 %37, i64* %36, align 8
  %38 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %35, i32 0, i32 1
  %39 = extractvalue { i64, i32* } %34, 1
  store i32* %39, i32** %38, align 8
  br label %40

40:                                               ; preds = %51, %32
  %41 = load i32, i32* %9, align 4
  %42 = icmp ugt i32 %41, 0
  br i1 %42, label %43, label %55

43:                                               ; preds = %40
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = icmp eq i64 %45, 0
  %47 = zext i1 %46 to i32
  %48 = call i64 @unlikely(i32 %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %43
  store i32* null, i32** %4, align 8
  br label %58

51:                                               ; preds = %43
  %52 = load i32, i32* %9, align 4
  %53 = add i32 %52, -1
  store i32 %53, i32* %9, align 4
  %54 = call i32 @xcb_render_pictscreen_next(%struct.TYPE_8__* %10)
  br label %40

55:                                               ; preds = %40
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 1
  %57 = load i32*, i32** %56, align 8
  store i32* %57, i32** %4, align 8
  br label %58

58:                                               ; preds = %55, %50
  %59 = load i32*, i32** %4, align 8
  ret i32* %59
}

declare dso_local { i64, i32* } @xcb_setup_roots_iterator(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @xcb_screen_next(%struct.TYPE_7__*) #1

declare dso_local { i64, i32* } @xcb_render_query_pict_formats_screens_iterator(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @xcb_render_pictscreen_next(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
